Migrate all posts

--- a/fr/_posts/2015-12-28-git-difference-between-merge-and-rebase.html
+++ b/fr/_posts/2015-12-28-git-difference-between-merge-and-rebase.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "Git - Difference between merge and rebase"
 date:   2015-12-28 22:31:56 +0200
-lang: en
+lang: fr
 lang-ref: git-difference-between-merge-and-rebase
 ---
 
